# concurrentes

./: .gitignore  makefile
clases/01-Procesos/: Dockerfile  ejecutar_docker.txt  main1.cc  main2.cc  main3.cc  main4.cc  main5.cc  main6.cc  main7.c
clases/02-Memoria-Compartida/: main1.cc  main2.cc
clases/03-Seniales/: main.cc
clases/04-Pipes-fifos/: CMakeLists.txt  main1.cc  main2.cc  main3.cc
clases/05-Locks/: main1.cc  main2.cc  main3.cc
clases/06-Semaforos/: main1.cc  main2.cc  main3.cc
prueba/: Prueba.cpp  Prueba.h  main.cpp  makefile  matcher.py
prueba/01-shm/: main.cpp  makefile
prueba/02-signal/: 01  02  main.cpp  makefile
prueba/03-pipe/: main.cpp
prueba/04-fifo/: main.cpp
prueba/05-locks/: main.cpp
prueba/06-semaforos/: main.cpp  makefile
pruebas-concurrentes/: CMakeLists.txt  main.cpp
pruebas-concurrentes/shared-memory/: SHMUsage.cpp  SHMUsage.h
tp1/: BeachManagerWorker.cpp  BeachManagerWorker.h  CMakeLists.txt  CourtManager.cpp  CourtManager.h  Fifo.cpp  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.h  LockFile.cpp  LockFile.h  Logger.cpp  Logger.h  MainSIGIntHandler.cpp  Match.cpp  Match.h  MatchPlayed.cpp  MatchPlayed.h  MatchProcess.cpp  MatchProcess.h  MatchesRecorder.cpp  MatchesRecorder.h  MemoriaCompartida.h  NewPlayerHandler.cpp  NewPlayerHandler.h  PeopleRegisterWorker.cpp  PeopleRegisterWorker.h  Person.cpp  Person.h  Pipe.cpp  Pipe.h  README.md  ResultsReporter.cpp  ResultsReporter.h  SIGIntHandler.cpp  SIGIntHandler.h  SignalHandler.cpp  SignalHandler.h  Subscriber.cpp  Subscriber.h  (+16 more)
tp1/handlers/: EventHandler.h  MainSIGIntHandler.cpp  MainSIGIntHandler.h  NewPlayerHandler.cpp  NewPlayerHandler.h  SIGIntHandler.cpp  SIGIntHandler.h
tp1/ipc/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h  LockFile.cpp  LockFile.h  MemoriaCompartida.h  Semaphore.cpp  Semaphore.h  SignalHandler.cpp  SignalHandler.h
tp1/model/: Match.cpp  Match.h  Person.cpp  Person.h  Team.cpp  Team.h
tp1/process/: BeachManager.cpp  BeachManager.h  BeachManagerWorker.cpp  BeachManagerWorker.h  CourtManager.cpp  CourtManager.h  MatchProcess.cpp  MatchProcess.h  ResultsReporter.cpp  ResultsReporter.h  TeamMaker.cpp  TeamMaker.h  Timer.cpp  Timer.h  WorkerProcess.cpp  WorkerProcess.h
tp1/utils/: Logger.cpp  Logger.h
tp2/: Administrador.cpp  Administrador.h  CMakeLists.txt  Cliente.cpp  Cliente.h  Constantes.h  Mensajes.h  README.md  Servicio.cpp  Servicio.h  ServicioMonedas.cpp  ServicioMonedas.h  ServicioTiempo.cpp  ServicioTiempo.h  Servidor.cpp  Servidor.h  main.cpp
tp2/ipc/: Cola.h  EventHandler.h  SIGINT_Handler.h  SignalHandler.cpp  SignalHandler.h
